Fixed off center content box for projects page

--- a/styles.css
+++ b/styles.css
@@ -92,7 +92,7 @@ html{
   margin: 0 auto;
   padding: 30px;
   margin-top: 70px;
-  margin-left: 400px;
+  margin-left: 350px;
   font-size: 28px;
   line-height: 2.5;
   color: white;
